--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,11 @@
     body {
       background-color: #f0f0f0 !important;
     }
+
+    #app {
+      overflow-x: hidden;
+    }
+
     .typed-cursor {
       font-weight: normal;
       -webkit-animation: blink .7s infinite;
@@ -52,7 +57,6 @@
       line-height: 0.8;
       padding: 0 0 40px;
       color: #ffffff;
-      text-align: right;
     }
 
     .time-line-row {
