--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,13 @@
       margin-top: .5rem;
       margin-bottom: 0;
     }
+
+    @media (max-width: 576px) {
+      .head-text {
+        font-size: 14px !important;
+        left: 15px !important;
+      }
+    }
   </style>
 </head>
 
