--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
 
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="./favicon.ico" />
   <title>React.js Boilerplate</title>
   <script id="threeloader" defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.min.js"></script>
   <style>
@@ -70,7 +70,7 @@
 
     @media (max-width: 576px) {
       .head-text {
-        font-size: 14px !important;
+        font-size: 20px !important;
         left: 15px !important;
       }
     }
