--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="./favicon.ico" />
-  <title>React.js Boilerplate</title>
+  <title>Pham Ba Tai - My profile, portfolio online, cv online</title>
   <script id="threeloader" defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.min.js"></script>
   <style>
     body {
